--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "graphql-react-event-booking",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "repository": "https://github.com/norictech-playground/graphql-react-event-booking_academind",
   "author": "norictech <ahmad.uji1902@gmail.com>",
   "license": "MIT",
@@ -10,6 +10,12 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.1",
+    "@babel/node": "^7.10.5",
+    "@babel/preset-env": "^7.11.0",
     "nodemon": "^2.0.4"
+  },
+  "scripts": {
+    "dev": "nodemon --exec babel-node app.js"
   }
 }
